--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/trainers_shop
 spring.datasource.username=postgres
 spring.datasource.password=nurislam21
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-server.port=8090
+
+spring.jpa.hibernate.ddl-auto=update
